@@ -1,4 +1,4 @@
-package qiwifiless3.demo.service;
+package spectrum.qf.service;
 
 import jcifs.smb.NtlmPasswordAuthentication;
 import jcifs.smb.SmbException;
@@ -9,7 +9,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Service;
-import qiwifiless3.demo.bean.QFFile;
+import spectrum.qf.bean.QFFile;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
@@ -18,24 +18,19 @@ import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @ConditionalOnProperty(value = "smb.enabled", havingValue = "true")
 @RequiredArgsConstructor
-public class QFRemoteFileServiceImpl implements QFFileService {
-    private static final Logger logger = LoggerFactory.getLogger(QFRemoteFileServiceImpl.class);
+public class QFServiceSMBImpl implements QFFileService {
+
+    private final NtlmPasswordAuthentication auth;
+    private static final Logger logger = LoggerFactory.getLogger(QFServiceSMBImpl.class);
     private static final int MIN_LENGTH_PHONE_NUMBER = 8;
     private static final int MAX_LENGTH_PHONE_NUMBER = 15;
-    private static final int MAX_COUNT_IN_ONE_DIRECTORY = 40000;
-    private static final long MILLISECONDS_IN_ONE_MINUTE = 60000;
+    private static final int MAX_COUNT_IN_ONE_DIRECTORY = 2;
+    private static final long MILLISECONDS_IN_ONE_MINUTE = 6;
 
-    @Value(value = "${smb.domain}")
-    private String smbDomain;
-    @Value(value = "${smb.username}")
-    private String smbUsername;
-    @Value(value = "${smb.password}")
-    private String smbPassword;
     @Value(value = "${smb.from-dir}")
     private String smbPathFrom;
     @Value(value = "${smb.dest-dir}")
@@ -46,7 +41,6 @@ public class QFRemoteFileServiceImpl implements QFFileService {
     @Override
     public QFFile getFile() {
         try {
-            NtlmPasswordAuthentication auth = new NtlmPasswordAuthentication(smbDomain, smbUsername, smbPassword);
             SmbFile smbFile = new SmbFile(smbPathFrom, auth);
             return QFFile.of(getAnyFile(smbFile));
         } catch (IOException e) {
@@ -67,38 +61,37 @@ public class QFRemoteFileServiceImpl implements QFFileService {
 
         SmbFile dateDestinationDir = null;
         try {
-            dateDestinationDir = new SmbFile(smbPathTo + dateFolderName);
+            dateDestinationDir = new SmbFile(smbPathTo + dateFolderName, auth);
         } catch (MalformedURLException ignored) {
-            logger.error("Ошибка при попытке указать путь файлу");
+            logger.error("Возникла ошибка во время попытки перемещения файла.");
         }
 
         SmbFile fileTo2 = null;
         try {
-            NtlmPasswordAuthentication auth = new NtlmPasswordAuthentication(smbDomain, smbUsername, smbPassword);
             fileTo2 = new SmbFile(getPathTo(dateDestinationDir) + "/" + fileName, auth);
         } catch (MalformedURLException | SmbException e) {
-            logger.error("Ошибка при попытке указать путь файлу.");
+            logger.error("Возникла ошибка во время попытки перемещения файла.");
         }
 
         if (deleteFiles) {
             try {
                 fileFrom.delete();
-                logger.info("Файл с именем " + fileName + " весом " + fileName.length() + " был успешно удален после перемещения в S3 хранилище.");
+                logger.info("Файл с именем " + fileName + " весом " + fileFrom.length() + " был успешно удален после копирования в S3 хранилище.");
             } catch (SmbException e) {
-                logger.error("Файл с именем " + fileName + " весом " + fileName.length() + " не получилось удалить после перемещения в S3 хранилище.");
+                logger.error("Файл с именем " + fileName + " весом " + " не получилось удалить после перемещения в S3 хранилище.");
             }
         } else {
             try {
                 fileFrom.renameTo(fileTo2);
-                logger.info("Файл с именем " + fileName + " весом " + fileName.length() + " байт успешно перемещен в папку processed.");
-            } catch (IOException e) {
+                logger.info("Файл с именем " + fileName + " весом " + " байт успешно перемещен в папку processed после копирования в S3 хранилище.");
+            } catch (SmbException e) {
+                logger.error("Файл с именем " + fileFrom.getName() + " уже существует в папке processed. Новый файл заменит уже существующий.");
                 try {
-                    assert fileTo2 != null;
-                    fileTo2.delete();
+                    fileFrom.delete();
+                    logger.info("Файл с именем " + fileFrom.getName() + " был успешно перезаписан в папку processed после копирования в S3 хранилище.");
                 } catch (SmbException ex) {
-                    logger.error("Файл с именем " + fileName + " не получилось удалить из папки processed. Новый файл не заменит старый.");
+                    logger.error("Файл с именем " + fileFrom.getName() + " не удалось удалить из папки processed. Новый файл не заменит уже существующий.");
                 }
-                logger.error("Файл с именем " + fileName + " уже существует в папке processed. Новый файл заменит уже существующий.");
             }
         }
     }
@@ -128,8 +121,10 @@ public class QFRemoteFileServiceImpl implements QFFileService {
         return getActualFolderInDir(newDir);
     }
 
-    private SmbFile createFirstFolder(SmbFile dir) throws MalformedURLException {
-        return new SmbFile(dir.getPath() + "/1");
+    private SmbFile createFirstFolder(SmbFile dir) throws MalformedURLException, SmbException {
+        SmbFile newDir = new SmbFile(dir.getPath() + "1", auth);
+        newDir.mkdirs();
+        return newDir;
     }
 
     private SmbFile checkForExistence(SmbFile dir) throws SmbException, MalformedURLException {
@@ -148,14 +143,16 @@ public class QFRemoteFileServiceImpl implements QFFileService {
         List<SmbFile> subFolders = List.of(Objects.requireNonNull(files));
         List<SmbFile> list = subFolders.stream()
                 .sorted((f1, f2) -> {
-                    Integer f1Name = Integer.parseInt(f1.getName());
-                    Integer f2Name = Integer.parseInt(f2.getName());
-                    return f1Name.compareTo(f2Name);
+                    Integer f1Name = Integer.parseInt(f1.getName().substring(0, f1.getName().length() - 1));
+                    Integer f2Name = Integer.parseInt(f2.getName().substring(0, f2.getName().length() - 1));
+                    return f2Name.compareTo(f1Name);
                 })
-                .collect(Collectors.toList())
-                .reversed();
-        SmbFile actualFolder = list.getFirst();
-        return checkForMaxElementInDir(actualFolder);
+                .toList();
+        if (!list.isEmpty()) {
+            SmbFile actualFolder = list.getFirst();
+            return checkForMaxElementInDir(actualFolder);
+        }
+        return checkForMaxElementInDir(dir);
     }
 
     private SmbFile checkForMaxElementInDir(SmbFile dir) throws SmbException, MalformedURLException {
@@ -166,9 +163,9 @@ public class QFRemoteFileServiceImpl implements QFFileService {
         if (files.length < MAX_COUNT_IN_ONE_DIRECTORY) {
             return dir;
         }
-        int dirNumberName = Integer.parseInt(dir.getName()) + 1;
-        //todo проверить как работает без getPath() у родителя
-        SmbFile newDirNumber = new SmbFile(dir.getParent() + "/" + dirNumberName + "/");
+        String countDir = dir.getName().substring(0, dir.getName().length() - 1);
+        int dirNumberName = Integer.parseInt(countDir) + 1;
+        SmbFile newDirNumber = new SmbFile(dir.getParent() + "/" + dirNumberName + "/", auth);
         newDirNumber.mkdirs();
         return newDirNumber;
     }
